# http-rs-examples

./: Cargo.toml  README.md
src/: t1_tcpstream.rs  t2_httpsig_client.rs  t2_httpsig_client_rsa.rs  t2_httpsig_server.rs  t3_hyper.rs  t3_hyper_http_client.rs  t3_hyper_http_server.rs  t4_hyper_http_hittpsig_server.rs  t5_1_rsa.rs  t5_2_openssl.rs  t5_hyper_https_client.rs  t5_hyper_tls_example_client.rs  t6_reqwest_client.rs  t6_reqwest_test.rs  t6_reqwest_with_tls.rs
src/cert/: cert.pem  cert2.pem  privkey.pem  pubkey.pem
