[package]
name = "Rust6"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "t1"
path = "src/t1_tcpstream.rs"

[[bin]]
name = "t2_client"
path = "src/t2_httpsig_client.rs"

[[bin]]
name = "t2_server"
path = "src/t2_httpsig_server.rs"

[[bin]]
name = "t3_hyper"
path = "src/t3_hyper.rs"

[dependencies]
http = { version = "1.1.0" }
http-body = { version = "1.0.0" }
http-body-util = { version = "0.1.1" }
bytes = { version = "1.6.0" }
httpsig-hyper = {version = "0.0.15"}
tokio = { version = "1.37.0", default-features = false, features = ["full"] }
hyper = {version = "1.3", features = ["full"] }
pin-project-lite = "0.2.14"
pretty_env_logger = "0.5.0"