[package]
name = "Rust6"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "t1"
path = "src/t1_tcpstream.rs"

# ---------------- HTTP ----------------------------------------------------------------
[[bin]]
name = "t2_client"
path = "src/t2_httpsig_client.rs"

[[bin]]
name = "t2_server"
path = "src/t2_httpsig_server.rs"

[[bin]]
name = "t3_hyper_http_client"
path = "src/t3_hyper_http_client.rs"

[[bin]]
name = "t3_hyper_http_server"
path = "src/t3_hyper_http_server.rs"

[[bin]]
name = "t4_hyper_http_hittpsig_server"
path = "src/t4_hyper_http_hittpsig_server.rs"

[[bin]]
name = "t4_hyper_http_hittpsig_client"
path = "src/t4_hyper_http_hittpsig_client.rs"

# ---------------- HTTPS ----------------------------------------------------------------

[[bin]]
name = "t5_hyper_https_client"
path = "src/t5_hyper_https_client.rs"

[[bin]]
name = "t5_hyper_tls_example_client"
path = "src/t5_hyper_tls_example_client.rs"

[[bin]]
name = "t6_hyper_https_httpsig_server"
path = "src/t6_hyper_https_httpsig_server.rs"



[dependencies]
http = { version = "1.1.0" }
http-body = { version = "1.0.0" }
http-body-util = { version = "0.1.1" }
bytes = { version = "1.6.0" }
httpsig-hyper = {version = "0.0.15"}
tokio = { version = "1.37.0", default-features = false, features = ["full"] }
hyper = {version = "1.3", features = ["full"] }
pin-project-lite = "0.2.14"
pretty_env_logger = "0.5.0"
hyper-tls = "0.6.0"
hyper-util = {version = "0.1.3", features = ["full"]}